@@ -2,6 +2,7 @@ v0.0.8 (XXX)
 - Added a :markup option to text related functions. Pango markup can be used to tweak 
   text style (bold, italics, super script, etc)
 - Replaced PDF::Wrapper#rounded_rectangle with the :radius option to PDF::Wrapper#rectangle
+- Allow cells to have a border with rounded corners
 
 v0.0.7 (30th April 2008)
 - Added support for creating new pages from a template file (pdf/png/jpg/gif/svg/probably more)
